--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "name": "Alaa El Helw",
     "email": "work@sunny.fr"
   },
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
     "command-line-args": "^5.1.3",
     "mustache": "^4.2.0",
