--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "swagger-2-jsdoc",
-  "version": "1.0.8",
+  "version": "1.0.9",
   "description": "Generates jsdoc from a swagger file/url",
   "main": "src/index.js",
   "bin": {
@@ -20,7 +20,8 @@
   "dependencies": {
     "command-line-args": "^5.1.3",
     "mustache": "^4.2.0",
-    "node-fetch": "^2.6.1"
+    "node-fetch": "^2.6.1",
+    "swagger-2-jsdoc": "^1.0.9"
   },
   "devDependencies": {
     "husky": "^7.0.2",
